# language-stats-rs

./: .env.example  .gitignore  Cargo.toml  README.md
src/: cache.rs  chart.rs  colors.rs  github.rs  main.rs  models.rs  query.rs  refresh.rs  stats.rs
src/chart/: full.rs  minimal.rs  mod.rs  svg.rs
