[package]
name = "language-stats-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2"
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
httpdate = "1"
image = "0.25"
imageproc = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
